Fixed minor alignment issue

--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0.5rem;
 }
 
 .education-header {
